--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="footer-section">
                     <div class="nav-logo">
                 <div class="logo-icon">
-                    <img src="images/logo.png" alt="Logo École Excellence" class="footer-logo-image">
+                    <i class="fas fa-graduation-cap"></i>
                 </div>
                 <span class="logo-text">École Excellence</span>
             </div>
