--- a/index.html
+++ b/index.html
@@ -332,6 +332,8 @@
         </div>
     </section>
 
+    <script src="https://edpatrice.github.io/rag-widget/widget.js" data-tenant="COMP_NEXGENLABS_Y2I84DGL" defer></script>
+
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
@@ -390,4 +392,5 @@
 
     <script src="js/script.js"></script>
 </body>
+
 </html>
